--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -1,8 +1,6 @@
 <h1>Trietree#near</h1>
-
 <%= form_tag({:controller => 'trietree', :action => 'near'}, :remote => true, :class => 'form-ajax') do -%>
 <%= hidden_field_tag :ajax_handler, 'key_request' -%>
-<%= submit_tag('Start Ajax', :class => 'btn btn-primary btn-sm') -%>
+<%= text_field_tag :keyword %>
+<%= submit_tag('send', :class => 'btn btn-primary btn-sm', :type => 'hidden', :id => 'submit_btn') -%>
 <% end %>
-
-<div id="ajax-response-wrapper">gegege</div>
