--- a/app/views/trietree/near.js.erb
+++ b/app/views/trietree/near.js.erb
@@ -1,8 +1,6 @@
 if ($('#ajax-response-wrapper').size() === 0) {
-  console.log('size ==== 0');
-  $('body').append('<div id="ajax-response-wrapper">aaa</div>');
+  $('body').append('<div id="ajax-response-wrapper"></div>');
 } else {
-  console.log('size ==== 1');
-  $('#ajax-response-wrapper').html('aa');
+  $('#ajax-response-wrapper').html('');
 }
 $('#ajax-response-wrapper').html('<%=j render partial: "ajax_container", collections: @data %>');
