--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -1,4 +1,4 @@
-<h1>Trietree#near</h1>
+<h1>トライ木を使った文字列予測</h1>
 <%= form_tag({:controller => 'trietree', :action => 'near'}, :remote => true, :class => 'form-ajax') do -%>
 <%= hidden_field_tag :ajax_handler, 'key_request' -%>
 <%= text_field_tag :keyword %>
