--- a/app/views/trietree/_ajax_container.html.erb
+++ b/app/views/trietree/_ajax_container.html.erb
@@ -1,5 +1,7 @@
-<ul>
-<% @data.each do |str| %>
-<li><%= str %></li>
-<% end %>
-</ul>
+<!-- <% if @data != nil %> -->
+  <ul>
+    <% @data.each do |str| %>
+    <li><%= str %></li>
+    <% end %>
+  </ul>
+<!-- <% end %> -->
