--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,12 +13,13 @@
  *= require_tree .
  *= require_self
  */
- ul, ol {
+
+ #ajax-response-wrapper > ul, ol {
    padding: 0;
    position: relative;
  }
 
- ul li, ol li {
+ #ajax-response-wrapper > ul li, ol li {
    color: #2d8fdd;
    border-left: solid 6px #2d8fdd;/*左側の線*/
    background: #f1f8ff;/*背景色*/
@@ -27,6 +28,7 @@
    	padding: 0.5em;
    list-style-type: none!important;/*ポチ消す*/
  }
+
 
 #keyword {
   border:0;
