--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,17 @@
  *= require_tree .
  *= require_self
  */
+#ajax-response-wrapper {
+ display:inline-block;
+ vertical-align: middle;
+ width: 300px;
+}
+
+#ajax-response-wrapper-aho {
+ display:inline-block;
+ vertical-align: middle;
+ width: 300px;
+}
 
  #ajax-response-wrapper > ul, ol {
    padding: 0;
@@ -23,6 +34,21 @@
    color: #2d8fdd;
    border-left: solid 6px #2d8fdd;/*左側の線*/
    background: #f1f8ff;/*背景色*/
+   margin-bottom: 3px;/*下のバーとの余白*/
+  	line-height: 1.5;
+   	padding: 0.5em;
+   list-style-type: none!important;/*ポチ消す*/
+ }
+
+ #ajax-response-wrapper-aho > ul, ol {
+   padding: 0;
+   position: relative;
+ }
+
+ #ajax-response-wrapper-aho > ul li, ol li {
+   color: #FA5858;
+   border-left: solid 6px #FA5858;/*左側の線*/
+   background: #F6CECE;/*背景色*/
    margin-bottom: 3px;/*下のバーとの余白*/
   	line-height: 1.5;
    	padding: 0.5em;
