--- a/app/views/trietree/_ajax_container.html.erb
+++ b/app/views/trietree/_ajax_container.html.erb
@@ -1,7 +1,7 @@
-<!-- <% if @data != nil %> -->
+<% if @data != nil %>
   <ul>
     <% @data.each do |str| %>
     <li><%= str %></li>
     <% end %>
   </ul>
-<!-- <% end %> -->
+<% end %>
