--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,13 +15,13 @@
  */
 #ajax-response-wrapper {
  display:inline-block;
- vertical-align: middle;
+ vertical-align: top;
  width: 300px;
 }
 
 #ajax-response-wrapper-aho {
  display:inline-block;
- vertical-align: middle;
+ vertical-align: top;
  width: 300px;
 }
 
