--- a/app/views/trietree/near.js.erb
+++ b/app/views/trietree/near.js.erb
@@ -10,4 +10,4 @@ if ($('#ajax-response-wrapper-aho').size() === 0) {
 } else {
   $('#ajax-response-wrapper-aho').html('');
 }
-$('#ajax-response-wrapper-aho').html('<%=j render partial: "ajax_container", collections: @data %>');
+$('#ajax-response-wrapper-aho').html('<%=j render partial: "ajax_container_failure", collections: @failure_data %>');
