--- a/app/views/trietree/_ajax_container.html.erb
+++ b/app/views/trietree/_ajax_container.html.erb
@@ -1,7 +1,28 @@
 <% if @data != nil %>
   <ul>
-    <% @data.each do |str| %>
-    <li><%= str %></li>
+    <% @data.each do |obj| %>
+      <li class="title">
+        <font color="#191970"><label>リソース名:</label></font>
+        <%= link_to obj["word"],
+          {controller: 'trietree', action: 'download', filetype: "resource", path: obj["path"], filename: obj["word"]},
+          target: "_new"
+        %>
+      </li>
+      
+      <li class="info">
+        <font color="#191970"><label>Zip名:<label></font>
+          <%= link_to obj["zip"],
+            {controller: 'trietree', action: 'download', filetype: "zip", path: obj["zip"], filename: obj["zip"]},
+            target: "_new"
+          %>
+      </li>
+
+      <% if obj["path"].end_with? ".png", ".jpg", ".jpeg" %>
+        <li class="info"><font color="#191970"><label>リソースパス:<label></font><%= '/' + obj["path"] %></li>
+        <li class="info_last"><%= image_tag '/out/' + obj["path"] %></li>
+      <% else %>
+        <li class="info_last"><font color="#191970"><label>リソースパス:<label></font><%= '/' + obj["path"] %></li>
+      <% end %>
     <% end %>
   </ul>
 <% end %>
