--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>First</title>
+    <title>リソース検索</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <!-- <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %> -->
     <%= javascript_include_tag "application" %>
-    <!-- <%= javascript_include_tag "my" %> -->
   </head>
 
   <body>
