--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,12 +14,14 @@
  *= require_self
  */
 #ajax-response-wrapper {
+ font-family: 'Avenir','Helvetica Neue','Helvetica','Arial','Hiragino Sans','ヒラギノ角ゴシック';
  display:block;
  vertical-align: top;
  width: 620px;
 }
 
 #ajax-response-wrapper-aho {
+ font-family: 'Avenir','Helvetica Neue','Helvetica','Arial','Hiragino Sans','ヒラギノ角ゴシック';
  display:block;
  vertical-align: top;
  width: 620px;
@@ -66,13 +68,13 @@
    /* padding: 0.5em; */
  }
 
-#ajax-response-wrapper > label {
+.label_class {
    display:block;
    float:left;
    width:145px;
 }
 
-#ajax-response-wrapper > img {
+.img_class {
     max-width: 100%;
     height: auto;
 }
@@ -92,8 +94,7 @@
    list-style-type: none!important;/*ポチ消す*/
  }
 
-
-#keyword {
+/* #keyword {
   border:0;
   padding:10px;
   font-size:1.3em;
@@ -103,22 +104,18 @@
   margin:0 0 20px;
   width:300px;
 
-  /* Rounded Corners */
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
 
-  /* Shadow Inset */
   -moz-box-shadow: inset 0 0 4px rgba(0,0,0,0.2);
   -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.2);
   box-shadow: inner 0 0 4px rgba(0, 0, 0, 0.2);
 
-  /* Shadow Inset - Top */
   -moz-box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,0.5);
   -webkit-box-shadow: inset 1px 4px 9px -6px rgba(0, 0, 0, 0.5);
   box-shadow: inset 1px 4px 9px -6px rgba(0,0,0,0.5);
 
-  /* White Shadow - Bottom - Rounded Corners */
   -webkit-box-shadow: 0px 1px rgba(255, 255, 255, 0.5);
   -moz-box-shadow: 0px 1px rgba(255, 255, 255, 0.5);
   box-shadow: 0px 1px rgba(255, 255, 255, 0.5);
@@ -129,7 +126,7 @@
 
 input:focus {
     border:solid 1px #EEA34A;
-}
+} */
 
 #description {
   width: 620px;
