--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -8,7 +8,13 @@
 </div>
 <%= form_tag({:controller => 'trietree', :action => 'near'}, :remote => true, :class => 'form-ajax') do -%>
 <%= hidden_field_tag :ajax_handler, 'key_request' -%>
-<%= text_field_tag :keyword %>
+<!-- <%= text_field_tag :keyword %> -->
+<span class="input input--minoru">
+    <input class="input__field input__field--minoru keyword" type="text" id="input-13" name="keyword" />
+    <label class="input__label input__label--minoru" for="input-13">
+        <span class="input__label-content input__label-content--minoru">前方一致で検索結果が表示されます</span>
+    </label>
+</span>
 <%= submit_tag('send', :class => 'btn btn-primary btn-sm', :type => 'hidden', :id => 'submit_btn') -%>
 <% end %>
 
