--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,10 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.10/font-awesome-animation.css" type="text/css" media="all" />
     <link rel="stylesheet" type="text/css" href="/assets/css/normalize.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/fonts/font-awesome-4.2.0/css/font-awesome.min.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="/assets/fonts/font-awesome-4.2.0/css/font-awesome.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="/assets/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/set1.css" />
     <%= javascript_include_tag "application" %>
