--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -1,4 +1,5 @@
-<h3>本番リソース検索</h3>
+<h3><%= $const_info[$env_info["env"]]["title"] %>リソース検索</h3>
+<p>最終同期日時: <%= $update_time %></p>
 <div id="description">
   <ul>
     <li>本番で使われているダウンロードリソースをファイル名で検索できます</li>
