--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,6 +88,11 @@
    position: relative;
  }
 
+ #ajax-response-wrapper-aho > ul, ol {
+   padding: 0;
+   position: relative;
+ }
+
  #ajax-response-wrapper > ul li {
    color: #2d8fdd;
    border-left: solid 6px #2d8fdd;/*左側の線*/
@@ -95,24 +100,6 @@
    line-height: 1.5;
    padding: 0.5em;
    list-style-type: none!important;/*ポチ消す*/
- }
-
- #ajax-response-wrapper > ul > .title {
-   background: #afeeee;
-   margin-bottom: 0px;
- }
-
- #ajax-response-wrapper > ul > .info {
-   margin-bottom: 0px;
- }
-
- #ajax-response-wrapper > ul > .info_last {
-   margin-bottom: 10px;
- }
-
- #ajax-response-wrapper-aho > ul, ol {
-   padding: 0;
-   position: relative;
  }
 
  #ajax-response-wrapper-aho > ul li, ol li {
@@ -123,6 +110,32 @@
    line-height: 1.5;
    padding: 0.5em;
    list-style-type: none!important;/*ポチ消す*/
+ }
+
+ #ajax-response-wrapper > ul > .title {
+   background: #afeeee;
+   margin-bottom: 0px;
+ }
+
+ #ajax-response-wrapper-aho > ul > .title {
+   background: #ff4500;
+   margin-bottom: 0px;
+ }
+
+ #ajax-response-wrapper > ul > .info {
+   margin-bottom: 0px;
+ }
+
+ #ajax-response-wrapper-aho > ul > .info {
+   margin-bottom: 0px;
+ }
+
+ #ajax-response-wrapper > ul > .info_last {
+   margin-bottom: 10px;
+ }
+
+ #ajax-response-wrapper-aho > ul > .info_last {
+   margin-bottom: 10px;
  }
 
 #description {
