--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -2,7 +2,7 @@
 <div id="description">
   <ul>
     <li>gang1で使われていた画像をカード名や冠名で検索できます</li>
-    <li>data_update_manageでdeletedフラグが立っているものは無視します</li>
+    <li>左は前方一致検索、右は前方一致を除く部分一致検索です</li>
     <li><i class="fas fa-file-download faa-bounce animated fa-fw"></i>←このアイコンがあるものはクリックでダウンロードできます</li>
   </ul>
 </div>
