カード名に冠名を

--- a/app/views/trietree/near.html.erb
+++ b/app/views/trietree/near.html.erb
@@ -11,7 +11,7 @@
 <span class="input input--minoru">
     <input class="input__field input__field--minoru keyword" type="text" id="input-13" name="keyword" />
     <label class="input__label input__label--minoru" for="input-13">
-        <span class="input__label-content input__label-content--minoru">前方一致で検索結果が表示されます</span>
+        <span class="input__label-content input__label-content--minoru">左のリストは前方一致、右のリストは部分一致の検索結果</span>
     </label>
 </span>
 
