global navi sample

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -163,6 +163,35 @@
   padding: 0.5em 0;
 }
 
+#global ul.pageNav01 {
+  font-family: 'Avenir','Helvetica Neue','Helvetica','Arial','Hiragino Sans','ヒラギノ角ゴシック';
+	margin: 0 0 10px;
+	padding: 10px 10px 5px;
+	background: #eee;
+	text-align: center;
+}
+
+#global ul.pageNav01 li {
+	display: inline;
+	margin: 0 2px;
+	padding: 0;
+}
+
+#global ul.pageNav01 li span,
+#global ul.pageNav01 li a {
+	display: inline-block;
+	margin-bottom: 5px;
+	padding: 1px 8px;
+	background: #fff;
+	border: 1px solid #aaa;
+	text-decoration: none;
+	vertical-align: middle;
+}
+
+#global ul.pageNav01 li a:hover {
+	background: #eeeff7;
+	border-color: #00f;
+}
 .select_radio_button {
   margin-left: 20px;
   position:relative;
