--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,23 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    
+
     <%= javascript_include_tag "application" %>
   </head>
   <body>
     <%= yield %>
     <script src="/assets/js/classie.js"></script>
+    <div id="global">
+      <ul class="pageNav01">
+        <li><a href="1.html">&laquo; 前</a></li>
+        <li><a href="1.html">1</a></li>
+        <li><span>2</span></li>
+        <li><a href="3.html">3</a></li>
+        <li><a href="4.html">4</a></li>
+        <li><a href="5.html">5</a></li>
+        <li><a href="6.html">6</a></li>
+        <li><a href="3.html">次 &raquo;</a></li>
+      </ul>
+    </div>
   </body>
 </html>
