failure css remove

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,9 +60,9 @@
  }
 
  #ajax-search-card-aho > ul li, ol li {
-   color: #FA5858;
-   border-left: solid 6px #FA5858;/*左側の線*/
-   background: #F6CECE;/*背景色*/
+   color: #2d8fdd;
+   border-left: solid 6px #2d8fdd;/*左側の線*/
+   background: #f1f8ff;/*背景色*/
    /* margin-bottom: 3px;/*下のバーとの余白*/ */
    line-height: 1.5;
    padding: 0.5em;
@@ -103,9 +103,9 @@
  }
 
  #ajax-response-wrapper-aho > ul li {
-   color: #FA5858;
-   border-left: solid 6px #FA5858;/*左側の線*/
-   background: #F6CECE;/*背景色*/
+   color: #2d8fdd;
+   border-left: solid 6px #2d8fdd;/*左側の線*/
+   background: #f1f8ff;/*背景色*/
    line-height: 1.5;
    padding: 0.5em;
    list-style-type: none!important;/*ポチ消す*/
@@ -117,7 +117,7 @@
  }
 
  #ajax-response-wrapper-aho > ul > .title {
-   background: #F3A5A5;
+   background: #afeeee;
    margin-bottom: 0px;
  }
 
@@ -222,7 +222,7 @@
 }
 
 .link_failure {
-  color: #FA5858;
+  color: #2d8fdd;
 }
 
 .link_failure:hover {
