--- a/app/views/trietree/_ajax_container.html.erb
+++ b/app/views/trietree/_ajax_container.html.erb
@@ -42,8 +42,8 @@
 <% else %>
   <ul>
     <li class="title">
-      <font color="#191970"><label class="label_class">Not Found</label></font>
-        <i></i>【<%= @request_keyword %>】に該当するリソースは見つかりませんでした
+      <font color="#191970"><label class="label_class">(´・ω・)</label></font>
+        <i></i>検索キーワード　=　【<%= @request_keyword %>】
     </li>
   </ul>
 <% end %>
